--- a/composer.json
+++ b/composer.json
@@ -16,4 +16,9 @@
         "phpspec/phpspec" : "2.0.0-BETA4",
         "symfony/yaml" : "~2.3"
     }
+    "extra" : {
+        "branch-alias" : {
+            "dev-master" : "1.0.x-dev"
+        }
+    }
 }
