--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name"    : "flint/tacker",
+    "description" : "Easy configuration for Pimple based on Symfony Config.",
     "license" : "MIT",
 
     "autoload" : {
@@ -15,7 +16,8 @@
     "require-dev" : {
         "phpspec/phpspec" : "2.0.0-BETA4",
         "symfony/yaml" : "~2.3"
-    }
+    },
+
     "extra" : {
         "branch-alias" : {
             "dev-master" : "1.0.x-dev"
