Move Caching out into CacheLoader and Normalization into NormalizerLoader.
This leaves only the Configurator to be pimple specific. Also it is now
possible to mix and match the different loaders.

--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,21 @@
 {
     "name"    : "flint/tacker",
-    "description" : "Easy configuration for Pimple based on Symfony Config.",
+    "description" : "Easy configuration based on Symfony Config",
     "license" : "MIT",
 
     "autoload" : {
-        "psr-0" : { "Tacker\\" : "src" }
+        "psr-0" : { "Tacker\\" : "src" },
+        "files" : ["src/Tacker/functions.php"]
     },
 
     "require" : {
         "php"            : ">=5.3.3",
-        "pimple/pimple"  : "~1.0",
         "symfony/config" : "~2.3"
     },
 
     "require-dev" : {
         "phpspec/phpspec" : "2.0.0-BETA4",
+        "pimple/pimple" : "~1.0",
         "symfony/yaml" : "~2.3"
     },
 
