--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,10 @@
 
     "require" : {
         "php"            : ">=5.3.3",
-        "symfony/config" : "~2.3"
+        "symfony/config" : ">=2.3,<2.5"
     },
 
     "require-dev" : {
-        "phpspec/phpspec" : "2.0.0-BETA4",
         "pimple/pimple" : "~1.0",
         "symfony/yaml" : "~2.3"
     },
