Remove call_user_func and global function that was only used a single place

--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "license" : "MIT",
 
     "autoload" : {
-        "psr-0" : { "Tacker\\" : "src" },
-        "files" : ["src/Tacker/functions.php"]
+        "psr-0" : { "Tacker\\" : "src" }
     },
 
     "require" : {
