--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,22 @@ php:
     - 5.4
     - 5.5
     - 5.6
+    - 7.0
     - hhvm
+    - hhvm-nightly
+
+matrix:
+    allow_failures:
+        - php: 7.0
+
+cache:
+    directories:
+        - $HOME/.composer/cache
+
+sudo: false
 
 before_script:
-    - "echo '{\"config\":{\"github-oauth\": {\"github.com\":\"fa354b2f030836334eac842f8fd69a03e353d247\"}}}' > ~/.composer/config.json"
-    - "composer require --dev phpspec/phpspec:~2.0 --no-update"
-    - "composer install --dev"
+    - "composer require phpspec/phpspec:~2.0 --no-update"
+    - "composer install"
 
 script: vendor/bin/phpspec run -fpretty -v
