--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
 
     "require" : {
-        "php"            : "~5.4",
+        "php"            : "~5.4 || ~7.0",
         "symfony/config" : "~2.3"
     },
 
