--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 
     "require" : {
         "php"            : ">=5.3.3",
-        "symfony/config" : ">=2.3,<2.5"
+        "symfony/config" : ">=2.3"
     },
 
     "require-dev" : {
