--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 
     "require" : {
         "php"            : "~5.4 || ~7.0",
-        "symfony/config" : "~2.3"
+        "symfony/config" : "~2.3|^3.0"
     },
 
     "require-dev" : {
