--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
     },
 
     "require" : {
-        "php"            : ">=5.3.3",
-        "symfony/config" : ">=2.3"
+        "php"            : "^5.3|^7.0",
+        "symfony/config" : "^2.3|^3.0"
     },
 
     "require-dev" : {
-        "pimple/pimple" : "~1.0",
-        "symfony/yaml" : "~2.3"
+        "pimple/pimple" : "^1.0",
+        "symfony/yaml" : "^2.3|^3.0"
     },
 
     "extra" : {
