--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
     },
 
     "require" : {
-        "php"            : "~5.4 || ~7.0",
-        "symfony/config" : "~2.3|^3.0"
+        "php"            : "^5.4|^7.0",
+        "symfony/config" : "^2.7|^3.0"
     },
 
     "require-dev" : {
-        "pimple/pimple" : "~3.0",
-        "symfony/yaml"  : "~2.4"
+        "pimple/pimple" : "^3.0",
+        "symfony/yaml"  : "^2.4|^3.0"
     },
 
     "extra" : {
